Para el usuario alumno ahora tiene seguridad con login

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -13,7 +13,7 @@
 <h:body>
 	<h:link value="Administracion" outcome="/administracion/dashboard.xhtml"/><br/>
 	<h:link value="Coordinador" outcome="/coordinador/dashboard.xhtml"/><br/>
-	<h:link value="Alumno" outcome="/alumno/inicio-sesion.xhtml"/><br/>
-	<h:link value="profesor" outcome="profesor"/>
+	<h:link value="Alumno" outcome="/alumno/dashboard.xhtml"/><br/>
+	<h:link value="Profesor" outcome="profesor"/>
 </h:body>
 </html>
