--- a/tecolotl-web/src/main/webapp/ingreso.xhtml
+++ b/tecolotl-web/src/main/webapp/ingreso.xhtml
@@ -13,17 +13,17 @@
     <h:outputStylesheet library="css" name="ingreso.css"/>
     <div class="contenedor">
         <h:graphicImage library="img" name="icono/esquadron-contorno.svg" styleClass="logo" pt:uk-svg=""/>
-        <form action="">
+        <form action="j_security_check" method="post">
             <div class="uk-margin">
                 <div class="uk-inline">
                     <a class="uk-form-icon" uk-icon="icon: user"/>
-                    <input class="uk-input uk-border-rounded" placeholder="apodo"/>
+                    <input class="uk-input uk-border-rounded" placeholder="apodo" name="j_username"/>
                 </div>
             </div>
             <div class="uk-margin">
                 <div class="uk-inline">
                     <a class="uk-form-icon" uk-icon="icon: lock"/>
-                    <input class="uk-input uk-border-rounded" type="password" placeholder="contraseña"/>
+                    <input class="uk-input uk-border-rounded" type="password" placeholder="contraseña" name="j_password"/>
                 </div>
             </div>
             <div class="uk-margin">
