--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/free-library.xhtml
@@ -127,6 +127,7 @@
                                                     </h:panelGroup>
                                                 </div>
                                                 <div class="uk-width-expand ">
+                                                    <ui:remove>
                                                     <div class="uk-grid uk-grid-small uk-child-width-1-5" uk-grid="">
                                                         <div><h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg" /></div>
                                                         <div><h:graphicImage pt:data-uk-tooltip="title: Transcript" styleClass="uk-icon-image uk-svg " library="img" name="icono/transcript1.svg" /></div>
@@ -134,6 +135,7 @@
                                                         <div><h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" /></div>
                                                         <div><h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" /></div>
                                                     </div>
+                                                    </ui:remove>
                                                 </div>
                                             </h:panelGroup>
                                         </div>
