login modal boton estilo

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -89,7 +89,7 @@
                                                 </h:outputText>
                                                 #{actividadAlumno2Controlador.buscaPregunta(tareaActvidadModelo.idActividad)}
                                             </span>
-                                            #{tareaActvidadModelo.idActividad}
+                                           <ui:remove>#{tareaActvidadModelo.idActividad}</ui:remove>
                                         </div>
                                         <div class="uk-width-auto uk-text-right uk-text-muted">
                                             <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>
