--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
@@ -79,7 +79,7 @@
                 </div>
                 <h:panelGroup layout="block" styleClass="uk-child-width-1-2@m uk-grid" pt:uk-grid="">
                     <h:panelGroup layout="block" styleClass="contenedor-padre-activity" >
-                        <h:panelGroup layout="block" styleClass="uk-sortable contenedor-respuesta" pt:uk-sortable="group: respuesta"/>
+                        <h:panelGroup layout="block" styleClass="uk-sortable contenedor-respuesta" pt:uk-sortable="group: respuesta" pt:cls-no-drag="uk-sortable-nodrag"/>
                     </h:panelGroup>
                     <div class="trancript-contenedor arrastrar scroll-drag uk-text-justify remplazar" >
                         <h:outputText value="#{actividadBibliotecaLibre.transcripcion}" escape="false" />
